disabled MPGVisualizerTest